[tool.poetry]
name = "workshop-estrutura"
version = "0.1.0"
description = "projeto etl"
authors = ["Luiz Simoes <luizgsantonio@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
pytest = "^7.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
