[tool.poetry]
name = "workshop-estrutura"
version = "0.1.0"
description = "projeto etl"
authors = ["Luiz Simoes <luizgsantonio@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.3"
pandas = "^2.1.1"
openpyxl = "^3.1.2"
pytest = "^7.4.2"
isort = "^5.12.0"
blue = "^0.9.1"
taskipy = "^1.12.0"
mkdocs = "^1.5.3"
mkdocstrings-python = "^1.7.3"
pygments = "^2.16.1"
mkdocs-material = "^9.4.6"
pymdown-extensions = "^10.3"
mkdocs-mermaid2-plugin = "^1.1.1"
pre-commit = "^3.5.0"
pip-audit = "^2.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_third_part=[]

[tool.taskipy.tasks]
format = "isort . && blue ."
test = "pytest -v"
run = "python app/main.py"
